# llama.rn

./: .gitmodules  package.json
android/: build.gradle
android/src/main/: CMakeLists.txt
android/src/main/java/com/rnllama/: RNLlama.java
android/src/main/rnllama/: CMakeLists.txt
cpp/: llama-model.cpp  rn-completion.cpp  rn-completion.h  rn-llama.cpp  rn-llama.h  rn-tts.cpp  rn-tts.h
cpp/codec/src/: codec.cpp
cpp/codec/src/models/: dac.cpp
cpp/common/: common.h  sampling.cpp
cpp/ggml-opencl/kernels/: cvt.cl.h  gemm_noshuffle_q4_k_f32.cl.h  gemm_noshuffle_q6_k_f32.cl.h  gemv_noshuffle_q4_k_f32.cl.h  gemv_noshuffle_q6_k_f32.cl.h  mul_mm_q4_k_f32_l4_lm.cl.h  mul_mm_q5_k_f32_l4_lm.cl.h  mul_mv_q4_k_f32_flat.cl.h  mul_mv_q5_k_f32.cl.h  mul_mv_q5_k_f32_flat.cl.h
cpp/jsi/: JSICompletion.h  JSIHelpers.h  JSINativeHeaders.h  JSIParams.cpp  JSIRequestManager.h  RNLlamaJSI.cpp
ios/: CMakeLists.txt
scripts/: build-opencl.sh
src/: index.ts  jsi.ts  types.ts  version.ts
src/expo-plugin/: withLlamaRN.ts
tests/: simple_test.cpp
